Implement leaderboard api endpoint and regenerate client schemas
