# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import depositsRouter from "./deposits";
 import redeemCodesRouter from "./redeem-codes";
 import accountManagementRouter from "./account-management";
 import announcementsRouter from "./announcements";
+import leaderboardRouter from "./leaderboard";
 
 const router: IRouter = Router();
 
@@ -14,5 +15,6 @@ router.use(depositsRouter);
 router.use(redeemCodesRouter);
 router.use(accountManagementRouter);
 router.use(announcementsRouter);
+router.use(leaderboardRouter);
 
 export default router;
